--- a/skillsync-frontend/src/styles/home.css
+++ b/skillsync-frontend/src/styles/home.css
@@ -49,14 +49,14 @@
 }
 
 .hero h1 {
-  font-size: 72px;
+  font-size: 80px;
   font-weight: 800;
 }
 
 .hero p {
   margin-top: 20px;
   opacity: 0.7;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .pink {
@@ -69,6 +69,7 @@
   margin-top: 40px;
   gap: 40px;
   opacity: 0.8;
+  font-size:20px;
 }
 
 .hero-buttons {
@@ -76,6 +77,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+  font-size:24px;
 }
 
 .btn-outline {
@@ -85,6 +87,7 @@
   background: transparent;
   color: white;
   cursor: pointer;
+  font-size: large;
 } 
 
 
@@ -92,10 +95,16 @@
    FEATURES SECTION
 =========================== */
 
-.features {
+/* .features {
   padding: 120px 8%;
   text-align: center;
+} */
+
+.features {
+  padding: 220px 10% 220px;
+  text-align: center;
 }
+
 
 .feature-tag {
   display: inline-block;
@@ -104,7 +113,7 @@
   background: rgba(255, 0, 255, 0.15);
   color: #ff63d8;
   margin-bottom: 20px;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .features h2 {
@@ -117,6 +126,7 @@
   margin: auto;
   color: #aaa;
   margin-bottom: 60px;
+  font-size: 25px;
 }
 
 .feature-grid {
@@ -133,6 +143,7 @@
   transition: 0.3s ease;
   backdrop-filter: blur(15px);
   border: 1px solid rgba(255,255,255,0.08);
+  font-size:20px;
 }
 
 .feature-card:hover {
@@ -141,13 +152,69 @@
 }
 
 .feature-card h3 {
-  margin-top: 20px;
+  margin-top: 24px;
   margin-bottom: 10px;
   font-size: 22px;
 }
 
 .feature-card p {
   color: #aaa;
-  font-size: 15px;
+  font-size: 20px;
   line-height: 1.6;
+}
+
+/* ===========================
+   CTA SECTION
+=========================== */
+
+.cta-section {
+  padding: 10px 8%;
+  display: flex;
+  justify-content: center;
+}
+
+.cta-card {
+  width: 100%;
+  max-width: 1100px;
+  padding: 100px 40px;
+  border-radius: 28px;
+  text-align: center;
+  background: rgba(255,255,255,0.04);
+  border: 1px solid rgba(255,255,255,0.08);
+  backdrop-filter: blur(25px);
+  position: relative;
+}
+
+.cta-tag {
+  display: inline-block;
+  padding: 8px 20px;
+  border-radius: 999px;
+  background: rgba(0,255,174,0.15);
+  color: #00ffae;
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+
+.cta-card h2 {
+  font-size: 60px;
+  margin-bottom: 20px;
+}
+
+.cta-card p {
+  max-width: 600px;
+  margin: auto;
+  color: #aaa;
+  margin-bottom: 40px;
+  font-size:25px;
+}
+
+.cta-btn {
+  padding: 18px 42px;
+  font-size: 24px;
+}
+
+.cta-note {
+  margin-top: 20px;
+  color: #777;
+  font-size: 20px;
 }
